--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#!">
           <img src="assets/img/blueasy-logo.png" alt="Blueasy">
         </a>
-        <ul>
+        <ul class="horizontal-nav">
           <li><a href="#!" class="active">Home</a></li>
           <li><a href="#!">Services</a></li>
           <li><a href="#!">Features</a></li>
@@ -69,6 +69,46 @@
       </div><!-- //.row -->
     </div><!-- //.container -->
   </section><!-- //.stn-services -->
+  
+  <div class="stn-portfolio">
+    <section class="container tab-wrapper">
+      <ul class="horizontal-nav black-font tab-menu">
+        <li><a href="#!" class="active">All</a></li>
+        <li><a href="#!">Paronamars</a></li>
+        <li><a href="#!">Portreits</a></li>
+        <li><a href="#!">Macro</a></li>
+        <li><a href="#!">Journal</a></li>
+      </ul>
+      <h2 class="stn-heading black-line container">Portfolio</h2>
+      <div class="row thumbs-row">
+        <div class="col-sm-6 col-md-3"><a href="#!" class="thumb-1"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!" class="thumb-2"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!" class="thumb-3"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!" class="thumb-4"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!" class="thumb-5"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!" class="thumb-6"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!" class="thumb-7"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!" class="thumb-8"></a></div>
+      </div><!-- ///row -->
+      <div class="row thumbs-row">
+        <div class="col-sm-6 col-md-3"><a href="#!"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!"></a></div>
+       
+      </div><!-- ///row -->
+      <div class="row thumbs-row">
+        <div class="col-sm-6 col-md-3"><a href="#!"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#!"></a></div>
+      </div><!-- ///row -->
+    </section><!-- //container -->
+  </div><!-- //stn-portfolio -->
   
   <!-- jQuery for older IE -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
