end of video lesson 6

--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
       </div><!-- //.row -->
     </div><!-- //.container -->
   </section><!-- //.stn-services -->
-  
   <div class="stn-portfolio">
     <section class="container tab-wrapper">
       <ul class="horizontal-nav black-font tab-menu">
@@ -109,6 +108,36 @@
       </div><!-- ///row -->
     </section><!-- //container -->
   </div><!-- //stn-portfolio -->
+  
+  <section class="stn-video">
+    <h2 class="stn-heading container">Just default section</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor inventore amet ab modi quidem fugiat enim quaerat libero similique a.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit enim aliquid debitis pariatur, provident maxime assumenda rem laudantium quo possimus incidunt illo culpa vero cum natus et hic fuga voluptate?</p>
+          <a href="#!" class="btn-ghost-grey">Visit me</a>
+        </div><!-- //col -->
+        <div class="col-md-6 col-md-offset-1 stn-video-col">
+          <div class="videoWrapper">
+            <iframe class="video" src="https://player.vimeo.com/video/6686768" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          </div>
+        </div><!-- //col -->
+      </div><!-- //row -->
+    </div><!-- //container -->
+  </section><!-- //stn-video -->
+  
+  <section class="stn-twitter">
+    <h2 class="stn-heading container">Twitter <i class="icon-twitter stn-twitter-icon"></i></h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-11">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem libero ullam nemo itaque incidunt nobis <strong>@cheesecake</strong> nam rem et ut.</p>
+        </div><!-- //col -->
+      </div><!-- //row -->
+    </div><!-- //container -->
+  </section><!-- //stn-twitter -->
+  
   
   <!-- jQuery for older IE -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
