--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <li><a href="#!">Macro</a></li>
         <li><a href="#!">Journal</a></li>
       </ul>
-      <h2 class="stn-heading black-line container">Portfolio</h2>
+      <h2 class="stn-heading black-line">Portfolio</h2>
       <div class="row thumbs-row">
         <div class="col-sm-6 col-md-3"><a href="#!" class="thumb-1"></a></div>
         <div class="col-sm-6 col-md-3"><a href="#!" class="thumb-2"></a></div>
