end of lesson #7

--- a/index.html
+++ b/index.html
@@ -138,6 +138,37 @@
     </div><!-- //container -->
   </section><!-- //stn-twitter -->
   
+  <section class="stn-about">
+    <h2 class="stn-heading container">Who is John Doe?</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, ex numquam reprehenderit quae, accusantium consectetur iste tempora tenetur eos quisquam. Ducimus praesentium nobis quae nisi. Nihil reprehenderit, debitis ea est!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus aliquid distinctio ipsa praesentium, rerum esse!</p>
+        </div><!-- //col -->
+        <div class="col-md-6">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam est, debitis sequi illo pariatur cumque labore soluta at aspernatur, nostrum, corporis excepturi a hic exercitationem!</p>
+          <ul class="social-links">
+            <li><a href="#!"><i class="icon-twitter"></i></a></li>
+            <li><a href="#!"><i class="icon-google"></i></a></li>
+            <li><a href="#!"><i class="icon-dribbble"></i></a></li>
+            <li><a href="#!"><i class="icon-coffee"></i></a></li>
+          </ul>
+        </div><!-- //col -->
+      </div><!-- //row -->
+    </div><!-- //container -->
+  </section><!-- //stn-about -->
+  
+  <section class="stn-testimonials">
+    <h2 class="stn-heading container black-line">Testimonials <i class="icon-quote"></i></h2>
+    <div class="container">
+      <blockquote class="tst-quote">
+        Applicake chocolate cake wafer toffee pie soufflé wafer. Tart marshmallow wafer macaroon cheesecake jelly. Gingerbread cookie soufflé sweet roll sweet roll jelly-o.
+        <cite>-Walter White</cite>
+      </blockquote><!-- //tst-quote -->
+    </div><!-- //container -->
+  </section><!-- //stn-testimonials -->
+  
   
   <!-- jQuery for older IE -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
