--- a/index.html
+++ b/index.html
@@ -169,6 +169,56 @@
     </div><!-- //container -->
   </section><!-- //stn-testimonials -->
   
+  <section class="stn-contact">
+    <h2 class="stn-heading container">Contact</h2>
+    <div class="container">
+      <form action="#!" class="row">
+       <div class="col-md-6 col-md-push-6 frm-text-col">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quasi laboriosam, reprehenderit nulla aspernatur, et, assumenda laudantium repellendus dolorem voluptates at.
+          </p> 
+          <p>
+            Linda Newman <br>
+            W325 State Road 123 <br>
+            Mondovi, WI(Wisconsin) 98746-54321 <br>
+            (715) 946 - 1234
+          </p>
+        </div><!-- //col -->
+        <div class="col-md-5 col-md-pull-6">
+          <div class="frm-group">
+            <label for="name">Full name</label>
+            <input id="name" type="text" class="frm-control">
+          </div><!-- //frm-group -->
+          <div class="frm-group">
+            <label for="mail">Email</label>
+            <input id="mail" type="email" class="frm-control">
+          </div><!-- //frm-group -->
+        </div><!-- //col -->
+        <div class="col-md-12">
+          <div class="frm-group">
+            <label for="message">Message</label>
+            <textarea class="frm-control" id="message"></textarea>
+          </div><!-- //frm-group -->
+        </div><!-- //col -->
+        <div class="col-sm-6">
+          <button  class="btn-submit" type="submit">Message</button>
+        </div><!-- //col -->
+      </form>
+    </div><!-- //container -->
+  </section><!-- //stn-container -->
+  
+  <footer class="site-footer">
+    <div class="container">
+      <nav>
+        <ul class="footer-nav">
+          <li><a href="#!">Home</a></li>
+          <li><a href="#!">Services</a></li>
+          <li><a href="#!">Portfolio</a></li>
+          <li><a href="#!">Contact</a></li>
+        </ul><!-- //footer-nav -->
+      </nav>
+      <p class="copyright">2016 &copy</p>
+    </div><!-- //container -->
+  </footer><!-- //site-footer -->
   
   <!-- jQuery for older IE -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
