--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
   <header class="site-header">
     <nav class="site-nav">
       <div class="container">
-        <a href="#!">
+        <a href="#!" class="main-logo">
           <img src="assets/img/blueasy-logo.png" alt="Blueasy">
         </a>
-        <ul class="horizontal-nav">
+        <span class="main-nav-trigger trigger-nav">&#9776;</span>
+        <ul class="horizontal-nav trigger-victim">
           <li><a href="#!" class="active">Home</a></li>
           <li><a href="#!">Services</a></li>
           <li><a href="#!">Features</a></li>
